# HighAssuranceControllerOfSelfBalancingRobotCapstone

./: .gitmodules  README.md
Arduino/libraries/Foo/: README.md  library.properties
Arduino/libraries/Foo/src/: Foo.cpp  Foo.h
Arduino/libraries/Foo/src/cortex-m0plus/: README.md
Arduino/sketch_example/: sketch_example.ino
Controller/: Bal.fis  Fuzzy_Balance_Controller_Mamdani.m  Fuzzy_Yaw_Controller_Mamdani.m  KMFUZZIFY.m  KMLOGIC.m  Tilt_RuleBase.m  Yaw.fis  Yaw_RuleBase.m  twip_control.slx  twip_control_KMLOGIC.slx  twip_sys.m
Test Plan/: Test Plan.docx
Test Plan/V&V/: .~lock.AK_TestPlan V&V.docx#  25  AK_TestPlan V&V.docx
docs/: Issue #1  - Documentation.docx  dynamics_m.m  twip_dynamics.mw
kind2/: README.md  lustreToRust-embedded.ml  lustreToRust_diff.txt  run.sh
kind2/lus/: .pid.lus.kate-swp  fuzzy.lus  pid.lus  pid2.lus  pid2build.sh  readme.md  simple.lus  twip.lus
kind2/lus/fuzzy.lus.out/FUZ/implem/: Cargo.toml
kind2/lus/fuzzy.lus.out/between/implem/: Cargo.toml
kind2/lus/fuzzy.lus.out/dkmfuzzy/implem/: Cargo.toml
nix/: bootstrap-nix.sh  default.nix  result  shell.nix
nix/verification/: czmq-configure.patch  kind2.nix  libczmq-configure.patch  sphinx-configure.patch
otis-AK/otis-server/: README.md  data-display.php  index.html  live.php  load-data.php  save-table.php  service.php
otis-AK/otis-tcp/: Cargo.toml  LICENSE  README.md
otis-AK/otis-tcp/migrations/2020-03-05-214006_create_otis/: down.sql  up.sql
otis-AK/otis-tcp/src/: main.rs  models.rs  schema.rs
rust-lib/: Cargo.toml  README.md  build.sh
rust-lib/src/: lib.rs
(+24 files in other folders)
