[package]
name = "rust-lib"
version = "0.1.0"
authors = ["Michal Podhradsky <mpodhradsky@galois.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"

[lib]
path = "src/lib.rs"
crate-type = ["staticlib"]
