[package]
name = "otis_tcp"
version = "0.1.0"
authors = ["artem1199 <artkulak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smoltcp = "0.6.0"
log = "0.4.8"
env_logger = "0.7.1"
getopts = "0.2.21"
byteorder = "1.3.4"
diesel = { version = "1.0.0", features = ["mysql"] }
dotenv = "0.9.0"